test_programs/compile_failure/noirc_frontend_tests_deny_capturing_mut_var_as_param_to_impl_method/src/main.nr

    struct Foo {
        value: Field,
    }

    impl Foo {
        fn mutate(&mut self) {
            self.value = 2;
        }
    }

    fn main() {
        let mut foo = Foo { value: 1 };
        let f = || foo.mutate();
        f();
        assert(foo.value == 2);
    }
    